--- a/nationfeedtool.html
+++ b/nationfeedtool.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discord Webhook Sender</title>
+    <title>Origin Zero</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -12,7 +12,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background: url('https://i.imgur.com/Ofp23p0.png') no-repeat center center fixed;
+            min-height: 100vh;
+            background: url('https://i.imgur.com/vnPx0rs.png') no-repeat center center fixed;
             background-size: cover;
             color: #ffffff;
         }
@@ -34,7 +35,7 @@
             text-align: center;
         }
         .container {
-            margin-top: 50px;
+            margin: auto;
             background: rgba(42, 42, 61, 0.9);
             padding: 20px;
             border-radius: 8px;
@@ -77,7 +78,7 @@
             position: fixed;
             bottom: 20px;
             left: 20px;
-            background: rgba(0, 0, 0, 0.6);
+            background: rgba(255, 255, 255, 0.3);
             border: none;
             border-radius: 50%;
             width: 40px;
@@ -88,6 +89,7 @@
             color: white;
             font-size: 1.5rem;
             cursor: pointer;
+            backdrop-filter: blur(5px);
         }
         .instructions-popup {
             display: none;
@@ -100,16 +102,17 @@
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             max-width: 300px;
+            backdrop-filter: blur(5px);
         }
     </style>
 </head>
 <body>
     <div class="header">
-        <img src="https://i.imgur.com/IsXgFpk.png" alt="Origin Zero Logo">
+        <img src="https://i.imgur.com/tKbjJv6.png" alt="Origin Zero Logo">
         <div class="title">Origin Zero Nation Feed</div>
     </div>
     <div class="container">
-        <h1>Discord Webhook Sender</h1>
+        <h1>Webhook Sender</h1>
         <form id="webhookForm">
             <label for="webhookUrl">Webhook URL</label>
             <input type="url" id="webhookUrl" name="webhookUrl" placeholder="Enter your Discord webhook URL" required>
@@ -124,7 +127,7 @@
 
     <button class="instructions-button" onclick="toggleInstructions()">?</button>
     <div class="instructions-popup" id="instructionsPopup">
-        <p>Enter your Discord webhook URL and the message you wish to send in the fields above. This tool will send your message directly to the webhook using a POST request.</p>
+        <p>Enter your assigned nation webhook url, and the diplomatic announcement you would like to make, then click the "Send Message" button to post your message.</p>
     </div>
 
     <script>
