--- a/nationfeedtool.html
+++ b/nationfeedtool.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Origin Zero</title>
+    <title>Webhook Sender</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -108,8 +108,8 @@
 </head>
 <body>
     <div class="header">
-        <img src="https://i.imgur.com/tKbjJv6.png" alt="Origin Zero Logo">
-        <div class="title">Origin Zero Nation Feed</div>
+        <img src="https://i.imgur.com/tKbjJv6.png" alt="REPLACE WITH YOUR LOGO">
+        <div class="title">Discord Webhook Sender</div>
     </div>
     <div class="container">
         <h1>Webhook Sender</h1>
@@ -127,7 +127,7 @@
 
     <button class="instructions-button" onclick="toggleInstructions()">?</button>
     <div class="instructions-popup" id="instructionsPopup">
-        <p>Enter your assigned nation webhook url, and the diplomatic announcement you would like to make, then click the "Send Message" button to post your message.</p>
+        <p>Enter your webhook link and message content, then click "Send Message" to send your webhook message!</p>
     </div>
 
     <script>
